--- a/PyCitySchools/PyCitySchools.ipynb
+++ b/PyCitySchools/PyCitySchools.ipynb
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +766,7 @@
        "Pena High School               90.54%  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +953,7 @@
        "Johnson High School              53.54%  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -991,117 +991,368 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Student ID</th>\n",
-       "      <th>student_name</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>grade</th>\n",
-       "      <th>school_name</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>School ID</th>\n",
-       "      <th>type</th>\n",
-       "      <th>size</th>\n",
-       "      <th>budget</th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Paul Bradley</td>\n",
-       "      <td>M</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>66</td>\n",
-       "      <td>79</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>77.08</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>77.52</td>\n",
+       "      <td>76.49</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Victor Smith</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>94</td>\n",
-       "      <td>61</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.15</td>\n",
+       "      <td>82.77</td>\n",
+       "      <td>83.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Kevin Rodriguez</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>90</td>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>76.40</td>\n",
+       "      <td>76.54</td>\n",
+       "      <td>76.88</td>\n",
+       "      <td>77.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Dr. Richard Scott</td>\n",
-       "      <td>M</td>\n",
-       "      <td>12th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>67</td>\n",
-       "      <td>58</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>77.36</td>\n",
+       "      <td>77.67</td>\n",
+       "      <td>76.92</td>\n",
+       "      <td>76.18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Bonnie Ray</td>\n",
-       "      <td>F</td>\n",
-       "      <td>9th</td>\n",
-       "      <td>Huang High School</td>\n",
-       "      <td>97</td>\n",
-       "      <td>84</td>\n",
-       "      <td>0</td>\n",
-       "      <td>District</td>\n",
-       "      <td>2917</td>\n",
-       "      <td>1910635</td>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>82.04</td>\n",
+       "      <td>84.23</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>83.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>77.44</td>\n",
+       "      <td>77.34</td>\n",
+       "      <td>77.14</td>\n",
+       "      <td>77.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.79</td>\n",
+       "      <td>83.43</td>\n",
+       "      <td>85.00</td>\n",
+       "      <td>82.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>77.03</td>\n",
+       "      <td>75.91</td>\n",
+       "      <td>76.45</td>\n",
+       "      <td>77.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>77.19</td>\n",
+       "      <td>76.69</td>\n",
+       "      <td>77.49</td>\n",
+       "      <td>76.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.63</td>\n",
+       "      <td>83.37</td>\n",
+       "      <td>84.33</td>\n",
+       "      <td>84.12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>76.86</td>\n",
+       "      <td>76.61</td>\n",
+       "      <td>76.40</td>\n",
+       "      <td>77.69</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>83.42</td>\n",
+       "      <td>82.92</td>\n",
+       "      <td>83.38</td>\n",
+       "      <td>83.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.59</td>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>83.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.09</td>\n",
+       "      <td>83.72</td>\n",
+       "      <td>83.20</td>\n",
+       "      <td>83.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.26</td>\n",
+       "      <td>84.01</td>\n",
+       "      <td>83.84</td>\n",
+       "      <td>83.64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Student ID       student_name gender grade        school_name  \\\n",
-       "0           0       Paul Bradley      M   9th  Huang High School   \n",
-       "1           1       Victor Smith      M  12th  Huang High School   \n",
-       "2           2    Kevin Rodriguez      M  12th  Huang High School   \n",
-       "3           3  Dr. Richard Scott      M  12th  Huang High School   \n",
-       "4           4         Bonnie Ray      F   9th  Huang High School   \n",
-       "\n",
-       "   reading_score  math_score  School ID      type  size   budget  \n",
-       "0             66          79          0  District  2917  1910635  \n",
-       "1             94          61          0  District  2917  1910635  \n",
-       "2             90          60          0  District  2917  1910635  \n",
-       "3             67          58          0  District  2917  1910635  \n",
-       "4             97          84          0  District  2917  1910635  "
+       "                         9th   10th   11th   12th\n",
+       "Bailey High School     77.08  77.00  77.52  76.49\n",
+       "Cabrera High School    83.09  83.15  82.77  83.28\n",
+       "Figueroa High School   76.40  76.54  76.88  77.15\n",
+       "Ford High School       77.36  77.67  76.92  76.18\n",
+       "Griffin High School    82.04  84.23  83.84  83.36\n",
+       "Hernandez High School  77.44  77.34  77.14  77.19\n",
+       "Holden High School     83.79  83.43  85.00  82.86\n",
+       "Huang High School      77.03  75.91  76.45  77.23\n",
+       "Johnson High School    77.19  76.69  77.49  76.86\n",
+       "Pena High School       83.63  83.37  84.33  84.12\n",
+       "Rodriguez High School  76.86  76.61  76.40  77.69\n",
+       "Shelton High School    83.42  82.92  83.38  83.78\n",
+       "Thomas High School     83.59  83.09  83.50  83.50\n",
+       "Wilson High School     83.09  83.72  83.20  83.04\n",
+       "Wright High School     83.26  84.01  83.84  83.64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "school_data_complete_df.head()\n"
+    "#Math Scores by grade\n",
+    "#set the index\n",
+    "school_type=school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "#for 9th grade\n",
+    "freshmen_math=student_data_df.loc[student_data_df[\"grade\"]==\"9th\"].groupby(\"school_name\")[\"math_score\"].mean()\n",
+    "#for 10th grade\n",
+    "sophomore_math=student_data_df.loc[student_data_df[\"grade\"]==\"10th\"].groupby(\"school_name\")[\"math_score\"].mean()\n",
+    "#for 11th grade\n",
+    "junior_math=student_data_df.loc[student_data_df[\"grade\"]==\"11th\"].groupby(\"school_name\")[\"math_score\"].mean()\n",
+    "#for 12th grade\n",
+    "senior_math=student_data_df.loc[student_data_df[\"grade\"]==\"12th\"].groupby(\"school_name\")[\"math_score\"].mean()\n",
+    "#Create the dataframe\n",
+    "math_score_by_grade_df=pd.DataFrame({\"School Type\":school_type,\n",
+    "              \"9th\":freshmen_math,\n",
+    "              \"10th\":sophomore_math,\n",
+    "              \"11th\":junior_math,\n",
+    "              \"12th\":senior_math \n",
+    "             })\n",
+    "math_score_by_grade_df=math_score_by_grade_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "#format the columns\n",
+    "math_score_by_grade_df[\"9th\"]=math_score_by_grade_df[\"9th\"].map(\"{:.2f}\".format)\n",
+    "math_score_by_grade_df[\"10th\"]=math_score_by_grade_df[\"10th\"].map(\"{:.2f}\".format)\n",
+    "math_score_by_grade_df[\"11th\"]=math_score_by_grade_df[\"11th\"].map(\"{:.2f}\".format)\n",
+    "math_score_by_grade_df[\"12th\"]=math_score_by_grade_df[\"12th\"].map(\"{:.2f}\".format)\n",
+    "#show dataframe\n",
+    "math_score_by_grade_df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.30</td>\n",
+       "      <td>80.91</td>\n",
+       "      <td>80.95</td>\n",
+       "      <td>80.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.68</td>\n",
+       "      <td>84.25</td>\n",
+       "      <td>83.79</td>\n",
+       "      <td>84.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.20</td>\n",
+       "      <td>81.41</td>\n",
+       "      <td>80.64</td>\n",
+       "      <td>81.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.63</td>\n",
+       "      <td>81.26</td>\n",
+       "      <td>80.40</td>\n",
+       "      <td>80.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.37</td>\n",
+       "      <td>83.71</td>\n",
+       "      <td>84.29</td>\n",
+       "      <td>84.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>80.87</td>\n",
+       "      <td>80.66</td>\n",
+       "      <td>81.40</td>\n",
+       "      <td>80.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Holden High School</th>\n",
+       "      <td>83.68</td>\n",
+       "      <td>83.32</td>\n",
+       "      <td>83.82</td>\n",
+       "      <td>84.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>81.29</td>\n",
+       "      <td>81.51</td>\n",
+       "      <td>81.42</td>\n",
+       "      <td>80.31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>81.26</td>\n",
+       "      <td>80.77</td>\n",
+       "      <td>80.62</td>\n",
+       "      <td>81.23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>83.81</td>\n",
+       "      <td>83.61</td>\n",
+       "      <td>84.34</td>\n",
+       "      <td>84.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>80.99</td>\n",
+       "      <td>80.63</td>\n",
+       "      <td>80.86</td>\n",
+       "      <td>80.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Shelton High School</th>\n",
+       "      <td>84.12</td>\n",
+       "      <td>83.44</td>\n",
+       "      <td>84.37</td>\n",
+       "      <td>82.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>83.73</td>\n",
+       "      <td>84.25</td>\n",
+       "      <td>83.59</td>\n",
+       "      <td>83.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>83.94</td>\n",
+       "      <td>84.02</td>\n",
+       "      <td>83.76</td>\n",
+       "      <td>84.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wright High School</th>\n",
+       "      <td>83.83</td>\n",
+       "      <td>83.81</td>\n",
+       "      <td>84.16</td>\n",
+       "      <td>84.07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         9th   10th   11th   12th\n",
+       "Bailey High School     81.30  80.91  80.95  80.91\n",
+       "Cabrera High School    83.68  84.25  83.79  84.29\n",
+       "Figueroa High School   81.20  81.41  80.64  81.38\n",
+       "Ford High School       80.63  81.26  80.40  80.66\n",
+       "Griffin High School    83.37  83.71  84.29  84.01\n",
+       "Hernandez High School  80.87  80.66  81.40  80.86\n",
+       "Holden High School     83.68  83.32  83.82  84.70\n",
+       "Huang High School      81.29  81.51  81.42  80.31\n",
+       "Johnson High School    81.26  80.77  80.62  81.23\n",
+       "Pena High School       83.81  83.61  84.34  84.59\n",
+       "Rodriguez High School  80.99  80.63  80.86  80.38\n",
+       "Shelton High School    84.12  83.44  84.37  82.78\n",
+       "Thomas High School     83.73  84.25  83.59  83.83\n",
+       "Wilson High School     83.94  84.02  83.76  84.32\n",
+       "Wright High School     83.83  83.81  84.16  84.07"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Reading Scores by grade\n",
+    "#set the index\n",
+    "school_type=school_data_df.set_index([\"school_name\"])[\"type\"]\n",
+    "#for 9th grade\n",
+    "freshmen_reading=student_data_df.loc[student_data_df[\"grade\"]==\"9th\"].groupby(\"school_name\")[\"reading_score\"].mean()\n",
+    "#for 10th grade\n",
+    "sophomore_reading=student_data_df.loc[student_data_df[\"grade\"]==\"10th\"].groupby(\"school_name\")[\"reading_score\"].mean()\n",
+    "#for 11th grade\n",
+    "junior_reading=student_data_df.loc[student_data_df[\"grade\"]==\"11th\"].groupby(\"school_name\")[\"reading_score\"].mean()\n",
+    "#for 12th grade\n",
+    "senior_reading=student_data_df.loc[student_data_df[\"grade\"]==\"12th\"].groupby(\"school_name\")[\"reading_score\"].mean()\n",
+    "#Create the dataframe\n",
+    "reading_score_by_grade_df=pd.DataFrame({\"School Type\":school_type,\n",
+    "              \"9th\":freshmen_reading,\n",
+    "              \"10th\":sophomore_reading,\n",
+    "              \"11th\":junior_reading,\n",
+    "              \"12th\":senior_reading \n",
+    "             })\n",
+    "reading_score_by_grade_df=reading_score_by_grade_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "#format the columns\n",
+    "reading_score_by_grade_df[\"9th\"]=reading_score_by_grade_df[\"9th\"].map(\"{:.2f}\".format)\n",
+    "reading_score_by_grade_df[\"10th\"]=reading_score_by_grade_df[\"10th\"].map(\"{:.2f}\".format)\n",
+    "reading_score_by_grade_df[\"11th\"]=reading_score_by_grade_df[\"11th\"].map(\"{:.2f}\".format)\n",
+    "reading_score_by_grade_df[\"12th\"]=reading_score_by_grade_df[\"12th\"].map(\"{:.2f}\".format)\n",
+    "#show dataframe\n",
+    "reading_score_by_grade_df\n"
    ]
   },
   {
